--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,6 +13,7 @@
     {{#unless devoured}}
     <li>{{burger_name}}</li>
     <img src="../public/assets/img/burger.png">
+    <button>devour</button>
     {{/unless}}
     {{/each}}
 </ul>
