--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,11 @@
-<div class="row">
+<div class="row text-center">
 
     <div class="col-5">
         <ul>
             {{#each burgers}}
             {{#unless devoured}}
-            <li>{{burger_name}}</li>
+            <li>"{{burger_name}}"</li>
+            <p>🍔</p>
             <button id="eat">devour</button>
             {{/unless}}
             {{/each}}
@@ -19,10 +20,25 @@
         <ul>
             {{#each burgers}}
             {{#if devoured}}
-            <li>{{burger_name}}</li>
+            <li>{{burger_name}} 💯</li>
             {{/if}}
             {{/each}}
         </ul>
     </div>
 
+</div>
+
+<div class="row text-center">
+    <div class="col">
+        <label>Make a burger</label>
+    </div>
+</div>
+
+<div class="row text-center">
+    <div class="col">
+        <form>
+            <input type="text">
+            <input type="submit" value="Submit">
+        </form>
+    </div>
 </div>
