made creating a burger work

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -36,8 +36,8 @@
 
 <div class="row text-center">
     <div class="col">
-        <form>
-            <input type="text">
+        <form action="/" method="POST">
+            <input type="text" name="burger">
             <input type="submit" value="Submit">
         </form>
     </div>
