added a delete button in that appeares on hover

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,7 +20,8 @@
         <ul>
             {{#each burgers}}
             {{#if devoured}}
-            <li>{{burger_name}} 💯</li>
+            <li>{{burger_name}} 💯 <img src="/assets/images/x.png" width="20px" height="20px" id="x">
+            </li>
             {{/if}}
             {{/each}}
         </ul>
