made delete route and button work

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,7 +20,7 @@
         <ul>
             {{#each burgers}}
             {{#if devoured}}
-            <li>{{burger_name}} 💯 <img src="/assets/images/x.png" width="20px" height="20px" id="x">
+            <li>{{burger_name}} 💯 <img src="/assets/images/x.png" width="20px" height="20px" data-id="{{id}}" id="x">
             </li>
             {{/if}}
             {{/each}}
