made make a burger input field fixed position for an infinite scroll like effect

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -19,3 +19,12 @@ opacity: 0%;
 .x:hover {
     opacity: 100%;
 }
+
+
+#search {
+    position: fixed;
+left: 50%;
+top: 50%;
+transform: translate(-50%,-50%);
+    
+}
