--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,7 +13,6 @@
     </div>
 
     <div class="col-2">
-
     </div>
 
     <div class="col-5">
@@ -30,17 +29,14 @@
 
 </div>
 
-<div class="row text-center">
-    <div class="col">
-        <label>Make a burger</label>
-    </div>
-</div>
+
 
 <div class="row text-center">
-    <div class="col">
+    <div id="search" class="col">
+        <label>Make a burger</label>
         <form action="/" method="POST">
             <input type="text" name="burger" placeholder="burger name">
-            <input type="submit" value="Submit">
+            <input type="submit" value="Make">
         </form>
     </div>
 </div>
