--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -32,7 +32,7 @@
 
 
 <div class="row text-center">
-    <div id="search" class="col">
+    <div id="make" class="col">
         <label>Make a burger</label>
         <form action="/" method="POST">
             <input type="text" name="burger" placeholder="burger name">
