--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <div class="row text-center">
 
-    <div class="col-5">
+    <div class="col-3">
         <ul>
             {{#each burgers}}
             {{#unless devoured}}
@@ -13,10 +13,10 @@
         </ul>
     </div>
 
-    <div class="col-2">
+    <div class="col-6">
     </div>
 
-    <div class="col-5">
+    <div class="col-3">
         <ul>
             {{#each burgers}}
             {{#if devoured}}
@@ -31,11 +31,18 @@
 </div>
 
 <div class="row text-center">
-    <div id="make" class="col">
+
+    <div class="col-3">
+    </div>
+
+    <div id="make" class="col-6">
         <label>Make a burger</label>
         <form action="/" method="POST">
             <input type="text" name="burger" placeholder="burger name">
             <input type="submit" value="Make" id="submit-burger">
         </form>
+    </div>
+
+    <div class="col-3">
     </div>
 </div>
