--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -36,7 +36,7 @@
     </div>
 
     <div id="make" class="col">
-        <label>Make a burger</label>
+        <label id="make-label">Make a burger</label>
         <form action="/" method="POST">
             <input type="text" name="burger" placeholder="burger name">
             <input type="submit" value="Make" id="submit-burger">
