--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -23,5 +23,13 @@ opacity: 0%;
     position: fixed;
     left: 50%;
     top: 50%;
-    transform: translate(-50%,-50%);  
+    transform: translate(-50%,-50%);
+    
+}
+
+@media screen and (max-width: 540px) {
+    #make {
+        background-color: #f7e04b;
+        padding: 13px;
+    }
 }
